# ChatSystem

./: CMakeLists.txt  ChatSystem.kdev4  README.md  config.txt
.kdev4/: ChatSystem.kdev4
Chat_System/: main.cpp  user.cpp
Chat_System/Client/: client.cpp  client.h  client.hpp  connection.cpp  connection.h  connection.hpp  encryption.cpp  encryption.h  encryption.hpp  main.cpp  message.cpp  message.h  message.hpp  user.cpp  user.h  user.hpp
Chat_System/Server/: channel.cpp  channel.hpp  database.cpp  database.hpp  main.cpp  message.cpp  message.hpp  server.cpp  server.hpp  user.cpp  user.h
Chat_System/Tests/: clientTest.hpp  test.cpp
Chat_System/Utils/: encryption.cpp  encryption.hpp  message.cpp  message.hpp  user.cpp  user.hpp
Documentation/: System Documentation.odt  notes.txt
include/mariadb/: errmsg.h  ma_list.h  ma_pvio.h  ma_tls.h  mariadb_com.h  mariadb_ctype.h  mariadb_dyncol.h  mariadb_stmt.h  mysql.h
include/mariadb/mariadb/: ma_io.h
include/mariadb/mysql/: client_plugin.h  plugin_auth.h  plugin_auth_common.h
include/pistache/: common.h
keyFolder/: privateKey  publicKey
